0.09
 [Common]
 - Update Module::Install to 1.21 version.

0.08 2021-02-21T01:47:43+01:00
 [Common]
 - Add blank line before return and after arguments.
 - Fix bugtracker.
 - Update copyright years.

 [PYX::Parser]
 - Add 'output_encoding' parameter and implement to output.
 - Add information about input encoding to doc.
 - Change api - parse() cannot decode input PYX via 'input_encoding'.
 - Improve doc by C<>.
 - Sort parameters in code and doc.

0.07 2020-04-26T15:53:28+02:00
 [Common]
 - Rewrite doc SUBROUTINES/METHODS to POD =head2.

 [PYX::Parser]
 - Add test for iso-8859-2 encoded data.
 - Add test for utf-8 encoded data.

0.06 2020-03-23T11:23:38+01:00
 [Common]
 - Fix Makefile.PL fails with no '.' in @INC.
 - Improve SYNOPSIS section in doc.
 - Rewrite tag to better element (in XML terminology) in tests and data.
 - Update LICENSE AND COPYRIGHT sections in doc.
 - Update Module::Install to 1.19 version.
 - Update author github username.
 - Update author name.
 - Update copyright years.

0.05 2016-02-20T23:27:55+01:00
 [Common]
 - Update copyright years.

 [PYX::Format]
 - First version.

 [PYX::Parser]
 - Add 'input_encoding' parameter.
 - Fix dependencies.

0.04 2015-09-27T22:54:17+02:00
 [Common]
 - Improve SEE ALSO section in doc.
 - Move author tests to xt/ directory.
 - Remove trailing whitespace.
 - Update Module::Install to 1.16 version.

0.03 2015-02-06T16:08:16+01:00
 [PYX]
 - Add REPOSITORY section to doc.
 - Fix SEE ALSO section to reality.

 [PYX::Parser]
 - Add REPOSITORY section to doc.
 - Add line() method.
 - Fix SEE ALSO section to reality.

0.02 2015-01-18T17:24:28+01:00
 [Common]
 - Fix minimal version of Perl.
 - Improve AUTHOR and LICENSE AND COPYRIGHT sections in doc.
 - Update copyright years.

 [PYX]
 - REWRITE API: Rename start_tag() subroutine to start_element().
 - REWRITE API: Rename end_tag() subroutine to end_element().

 [PYX::Parser]
 - REWRITE API: Rewrite raw constructor parameters to 'callbacks' hash
   reference.